--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cloudpayments-webhook",
   "version": "1.0.0",
-  "description": "Webhook server for CloudPayments",
+  "description": "Webhook server for CloudPayments with MongoDB and Telegram integration",
   "type": "module",
   "main": "server.js",
   "scripts": {
@@ -9,8 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
-    "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "https-proxy-agent": "^7.0.6"
+    "mongoose": "^8.4.0"
   }
 }
